--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.7.0",
-        "pusher-js": "^5.1.1"
+        "pusher-js": "^5.1.1",
+        "tailwindcss": "^1.4.4"
     }
 }
