--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.7",
+        "deployer/deployer": "^6.8",
         "deployer/recipes": "^6.2",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
