--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=4175b184be9141b8f152",
+    "/js/app.js": "/js/app.js?id=79bf06e70e1d36762c2c",
     "/css/app.css": "/css/app.css?id=67309f6d99e6b4e405ce",
-    "/js/manifest.js": "/js/manifest.js?id=3c768977c2574a34506e",
-    "/js/vendor.js": "/js/vendor.js?id=65754d1180516e6b65a7"
+    "/js/app.js.map": "/js/app.js.map?id=ced1b3d881579894ae7a",
+    "/js/manifest.js": "/js/manifest.js?id=89712bc6d8c588400cae",
+    "/js/manifest.js.map": "/js/manifest.js.map?id=2d58fed8b8c4a064950d",
+    "/js/vendor.js": "/js/vendor.js?id=185981313bdcdb92f47c",
+    "/js/vendor.js.map": "/js/vendor.js.map?id=3b9fa155206ef6d94e6a"
 }
