--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=1be4e2d765ca3b1dcfa2",
-    "/css/app.css": "/css/app.css?id=67309f6d99e6b4e405ce",
-    "/js/app.js.map": "/js/app.js.map?id=d2a88352f420c340aaa5",
-    "/js/manifest.js": "/js/manifest.js?id=89712bc6d8c588400cae",
-    "/js/manifest.js.map": "/js/manifest.js.map?id=2d58fed8b8c4a064950d",
-    "/js/vendor.js": "/js/vendor.js?id=185981313bdcdb92f47c",
-    "/js/vendor.js.map": "/js/vendor.js.map?id=3b9fa155206ef6d94e6a"
+    "/js/app.js": "/js/app.js?id=bcb6b772adae14d4b164",
+    "/css/app.css": "/css/app.css?id=ed1696cfd9f06a1c6d2b",
+    "/js/manifest.js": "/js/manifest.js?id=41f053ba9a94d81b39f8",
+    "/js/vendor.js": "/js/vendor.js?id=8649efcaf17b235118e0"
 }
