--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=c50b241d9a5f674ec758",
-    "/css/app.css": "/css/app.css?id=7dc46e78d5a4c4e7f1b2",
-    "/js/app.js.map": "/js/app.js.map?id=08841a1b716e9380097c",
-    "/js/manifest.js": "/js/manifest.js?id=89712bc6d8c588400cae",
-    "/js/manifest.js.map": "/js/manifest.js.map?id=2d58fed8b8c4a064950d",
-    "/js/vendor.js": "/js/vendor.js?id=185981313bdcdb92f47c",
-    "/js/vendor.js.map": "/js/vendor.js.map?id=3b9fa155206ef6d94e6a"
+    "/js/app.js": "/js/app.js?id=5c2f4de6acfdd8ac73aa",
+    "/css/app.css": "/css/app.css?id=8e1602d24a259744143d",
+    "/js/manifest.js": "/js/manifest.js?id=41f053ba9a94d81b39f8",
+    "/js/vendor.js": "/js/vendor.js?id=8649efcaf17b235118e0"
 }
