--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.7",
         "deployer/deployer": "^6.8",
-        "deployer/recipes": "^6.2",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/dusk": "^6.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
         "phpunit/phpunit": "^8.5"
