--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^5.0.5",
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.0",
@@ -23,6 +23,7 @@
         "eslint": "^7.0.0",
         "laravel-echo": "^1.7.0",
         "pusher-js": "^6.0.3",
-        "tailwindcss": "^1.4.6"
+        "tailwindcss": "^1.4.6",
+        "vue-confetti": "^2.0.9"
     }
 }
