--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,10 @@
 {
-    "/js/app.js": "/js/app.js?id=90d068b76a724f9803ff",
-    "/css/app.css": "/css/app.css?id=8e1602d24a259744143d",
-    "/js/manifest.js": "/js/manifest.js?id=41f053ba9a94d81b39f8",
-    "/js/vendor.js": "/js/vendor.js?id=c87717852967b13f7054"
+    "/js/app.js": "/js/app.js?id=58c4dbded46aa6d4123a",
+    "/css/app.css": "/css/app.css?id=ab045e6f4df3a002be7b",
+    "/js/app.js.map": "/js/app.js.map?id=b49bf5ab7e974799313c",
+    "/css/app.css.map": "/css/app.css.map?id=e2dfb4e55653909c6bc3",
+    "/js/manifest.js": "/js/manifest.js?id=89712bc6d8c588400cae",
+    "/js/manifest.js.map": "/js/manifest.js.map?id=2d58fed8b8c4a064950d",
+    "/js/vendor.js": "/js/vendor.js?id=80464565a22195045a84",
+    "/js/vendor.js.map": "/js/vendor.js.map?id=0e76c89b9d7a3b5462f9"
 }
