--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,14 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
-        "barryvdh/laravel-ide-helper": "^2.7",
+        "barryvdh/laravel-ide-helper": "^2.8",
         "deployer/deployer": "^6.8",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "laravel/dusk": "^6.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
+        "nunomaduro/larastan": "^0.6.4",
         "phpunit/phpunit": "^9.0",
         "staudenmeir/dusk-updater": "^1.1"
     },
@@ -77,7 +78,11 @@
         "dusk": [
             "@php artisan dusk"
         ],
-        "test": [
+        "phpstan": [
+            "./vendor/bin/phpstan analyse --memory-limit=2G"
+        ],
+        "test-all": [
+            "./vendor/bin/phpstan analyse --memory-limit=2G",
             "./vendor/bin/phpunit --color=always",
             "@php artisan dusk"
         ]
