--- a/.github/workflows/simplepointer.yml
+++ b/.github/workflows/simplepointer.yml
@@ -51,13 +51,13 @@ jobs:
       - name: Create SQLite database
         run: |
           mkdir -p database
-          touch database/database.sqlite
+          touch storage/database.sqlite
 
       - name: Run migrations
         env:
           DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
-        run: php artisan migrate
+          DB_DATABASE: storage/database.sqlite
+        run: php artisan migrate --seed
 
       - name: Run phpstan
         run: composer phpstan
@@ -81,5 +81,5 @@ jobs:
         env:
           APP_URL: "http://127.0.0.1:8000"
           DB_CONNECTION: sqlite
-          DB_DATABASE: database/database.sqlite
+          DB_DATABASE: storage/database.sqlite
         run: php artisan dusk
