CI Update for dusk

--- a/.github/workflows/simplepointer.yml
+++ b/.github/workflows/simplepointer.yml
@@ -21,6 +21,8 @@ jobs:
         uses: shivammathur/setup-php@2.4.0 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
+          Extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
+          coverage: none
 
       - name: Get composer cache directory
         id: composercache
@@ -36,13 +38,13 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Install Composer dependencies
+      - name: Install Dependencies (PHP vendors)
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
       - name: Generate key
         run: php artisan key:generate
 
-      - name: OSKAR-PHP-CS-Fixer
+      - name: Run CS Fixer
         uses: OskarStark/php-cs-fixer-ga@2.16.4
 
       - name: Install front-end dependencies
@@ -50,30 +52,20 @@ jobs:
           npm install
           npm run prod
 
-      - name: Create SQLite database
+      - name: Create DB and schemas
         run: |
           mkdir -p database
           touch storage/database.sqlite
-
-      - name: Run migrations
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABASE: database.sqlite
-        run: php artisan migrate --seed
+          php artisan migrate --seed
 
       - name: Run phpstan
         run: composer phpstan
 
-      - name: Run phpunit tests
+      - name: Run PHPUnit tests
         env:
             DB_CONNECTION: sqlite
             DB_DATABASE: database.sqlite
         run: composer phpstan
-
-      - name: Supervisor
-        run:
-          using: 'docker'
-          image: 'Dockerfile'
 
       - name: Upgrade Chrome Driver
         run: php artisan dusk:chrome-driver `/opt/google/chrome/chrome --version | cut -d " " -f3 | cut -d "." -f1`
@@ -81,12 +73,12 @@ jobs:
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux &
 
-      - name: Run Laravel Server
-        run: php artisan serve &
-
       - name: Run Dusk Tests
         env:
           APP_URL: "http://127.0.0.1:8000"
           DB_CONNECTION: sqlite
           DB_DATABASE: database.sqlite
-        run: php artisan dusk
+        run: |
+          php artisan queue:work --sleep=3 --tries=3
+          php artisan websockets:serve
+          php artisan dusk
