--- a/.github/workflows/simplepointer.yml
+++ b/.github/workflows/simplepointer.yml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy .env
-        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+        run: cp .env.ci .env
 
       - name: Setup PHP Action
-        uses: shivammathur/setup-php@2.4.0 #https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@2.7.0 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
           Extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
@@ -54,7 +54,7 @@ jobs:
 
       - name: Create DB and schemas
         run: |
-          mkdir -p database
+          mkdir -p storage
           touch storage/database.sqlite
           php artisan migrate --seed
 
