--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix --hot",
+        "prod": "mix --production",
         "production": "mix --production"
     },
     "devDependencies": {
