--- a/.env.ci
+++ b/.env.ci
@@ -1,7 +1,7 @@
 APP_NAME=AgilePointer
 APP_ENV=local
 APP_KEY=base64:LVAPgDZHSB0qikk3dfw3JrP3lN7Pwo5xs7seHg9skcQ=
-APP_DEBUG=true
+APP_DEBUG=false
 
 APP_URL=http://127.0.0.1:8080/
 
