--- a/.github/workflows/simplepointer.yml
+++ b/.github/workflows/simplepointer.yml
@@ -37,6 +37,8 @@ jobs:
             # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
+          tools: composer:v2
+          coverage: none
 
       - name: Install Dependencies (PHP vendors)
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
