--- a/.github/workflows/simplepointer.yml
+++ b/.github/workflows/simplepointer.yml
@@ -37,8 +37,6 @@ jobs:
             # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
-          tools: composer:v2
-          coverage: none
 
       - name: Install Dependencies (PHP vendors)
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
@@ -81,6 +79,8 @@ jobs:
           DB_CONNECTION: sqlite
           DB_DATABASE: database.sqlite
         run: |
+          # Send processes to background
           nohup php artisan queue:work --sleep=3 --tries=3 > /dev/null 2>&1 &
           nohup php artisan websockets:serve > /dev/null 2>&1 &
+          nohup php artisan serve > /dev/null 2>&1 &
           php artisan dusk
