--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -15,4 +15,4 @@ RUN apk --update add curl \
 RUN rm /var/cache/apk/* && \
     mkdir -p /var/www
 
-COPY --from=composer /usr/bin/composer /usr/bin/composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
