--- a/.github/workflows/simplepointer.yml
+++ b/.github/workflows/simplepointer.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy .env
-        run: cp .env.ci .env
+        run: cp .env.dusk.local .env
 
       - name: Setup PHP Action
         uses: shivammathur/setup-php@2.7.0 #https://github.com/shivammathur/setup-php
