Fixed scrolling on mobile

--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -10,6 +10,7 @@ RUN apk --update add curl \
     zlib-dev \
     libzip-dev \
     zip \
+    sqlite \
     && docker-php-ext-install zip
 
 RUN rm /var/cache/apk/* && \
