Updated for dusk ci

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,10 +1,10 @@
-APP_NAME=AgilePointer
+APP_NAME=SimplePointer
 APP_ENV=testing
 APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
 APP_DEBUG=false
 
-APP_URL=http://127.0.0.1:8080/
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 
