--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,14 @@ jobs:
       - name: Run CS Fixer
         uses: OskarStark/php-cs-fixer-ga@2.16.4
 
+      - name: Get npm cache directory
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Install front-end dependencies
         run: |
           npm install
