--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.26.10",
         "sass-loader": "^10.0.4",
+        "stylelint-config-recommended": "^3.0.0",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.3",
         "vue-template-compiler": "^2.6.10",
