--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,7 @@ jobs:
         run: php artisan serve > /dev/null 2>&1 &
 
       - name: Run Laravel Queue
-        run: php artisan queue:work > /dev/null 2>&1 &
+        run: php artisan queue:listen > /dev/null 2>&1 &
 
       - name: Run Websockets Server
         run: php artisan websockets:serve > /dev/null 2>&1 &
