--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,11 +60,11 @@ jobs:
           npm install
           npm run prod
 
-      - name: Put built assets in Artifacts # Save the compiled assets
-        uses: actions/upload-artifact@v1
-        with:
-          name: assets
-          path: public
+      # - name: Put built assets in Artifacts # Save the compiled assets
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: assets
+      #     path: public
 
       - name: Create DB and schemas
         run: |
@@ -98,3 +98,10 @@ jobs:
 
       - name: Run dusk tests
         run: php artisan dusk
+
+      - name: Upload Screenshots
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: screenshots
+          path: tests/Browser/screenshots
