--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,9 +99,16 @@ jobs:
       - name: Run dusk tests
         run: php artisan dusk
 
-      - name: Upload Screenshots
+      - name: Upload Dusk Screenshots on error
         if: failure()
         uses: actions/upload-artifact@v2
         with:
           name: screenshots
           path: tests/Browser/screenshots
+
+      - name: Upload Dusk Console Logs
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: console
+          path: tests/Browser/console
