Dusk ci issuses

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -2,7 +2,7 @@ APP_NAME=SimplePointer
 APP_ENV=testing
 APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
-APP_DEBUG=false
+APP_DEBUG=true
 
 APP_URL=http://127.0.0.1:8000/
 
