--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,8 +84,8 @@ jobs:
       - name: Run Laravel Server
         run: php artisan serve > /dev/null 2>&1 &
 
-      - name: Run Laravel Queue
-        run: php artisan queue:listen > /dev/null 2>&1 &
+      # - name: Run Laravel Queue
+      #   run: php artisan queue:listen > /dev/null 2>&1 &
 
       - name: Run Websockets Server
         run: php artisan websockets:serve > /dev/null 2>&1 &
