Updated PHPStan config

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -11,8 +11,7 @@ parameters:
 
     ignoreErrors:
 
-    excludes_analyse:
-        - ./*/*/FileToBeExcluded.php
+    excludePaths:
         - app/Http/Middleware/*
 
     checkMissingIterableValueType: false
