Add NPM To App Image. Use Composer From APK as it matches copy from latest.

--- a/.docker/php-fpm/Dockerfile
+++ b/.docker/php-fpm/Dockerfile
@@ -11,9 +11,9 @@ RUN apk --update add curl \
     libzip-dev \
     zip \
     sqlite \
+    composer \
+    npm \
     && docker-php-ext-install zip
 
 RUN rm /var/cache/apk/* && \
     mkdir -p /var/www
-
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
