Let Users Change Votes Until Cards Are Shown

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -1,7 +1,17 @@
+# see block below
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+upstream websocket1 {
+    server supervisor:6001;
+}
+
+
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    server_name localhost planningpoker.test;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
@@ -23,5 +33,25 @@ server {
 
     location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
         expires 5d;
+    }
+}
+
+# this requires explanation
+# websocket goes against 6001
+# if you go against the server running the containers, 80, 6001 and 9000 are all exposed.
+# when you post to 6001 it goes to supervisor.
+# if you run Dusk tests from *inside* a container is attempts a websocket on 6001 *at the app url*
+# the Chrome container says to look to nginx for the app host.
+# we need to farm out 6001 to supervisor.
+# conversely we don't have to expose 6001 and 9000 on the host if we receive all ports here.
+server {
+    listen 6001;
+    server_name localhost planningpoker.test;
+    location / {
+        proxy_pass http://websocket1;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
     }
 }
