--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -4,7 +4,7 @@ APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
 APP_DEBUG=true
 
-APP_URL=http://127.0.0.1:8000/
+APP_URL=http://planningpoker.test/
 
 LOG_CHANNEL=stack
 
@@ -26,3 +26,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_USE_LOCAL=true
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+USE_CONTAINER_BROWSER=TRUE
