--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - ./:/var/www/html:delegated
     ports:
       - "9000:9000"
+    links:
+      - 'nginx:planningpoker.test'
     networks:
       - laravel
 
@@ -32,13 +34,29 @@ services:
 
   nginx:
     image: nginx:stable-alpine
-    depends_on:
-      - app
+    #depends_on:
+    #  - app
     container_name: nginx
+    # the app will reside at port 80
     ports:
-      - "8000:80"
+      - "80:80"
     volumes:
       - ./public:/var/www/html/public:delegated
       - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - laravel
+
+  # used when running tests
+  # have USE_CONTAINER_BROWSER = true in .env file
+  # docker-compose exec php artisan dusk
+  chrome:
+    image: browserless/chrome
+    depends_on:
+      - app
+    container_name: chrome
+    ports:
+      - "3000:3000"
+    links:
+      - "nginx:planningpoker.test"
     networks:
       - laravel
