Run App at :8000 on Host, Make Accessible On Same Port Within Container Network

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -9,7 +9,11 @@ upstream websocket1 {
 
 
 server {
+    # during development on a macbook the app is at port 8000, port mapped at the container to 80.
+    # problem is that the app url is then at :8000 which isn't real/alive inside the docker network.
+    # so might as well listen on both ports just to be safe.
     listen 80;
+    listen 8000;
     index index.php index.html;
     server_name localhost planningpoker.test;
     error_log /var/log/nginx/error.log;
