--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -4,7 +4,7 @@ APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
 APP_DEBUG=true
 
-APP_URL=http://planningpoker.test/
+APP_URL=http://planningpoker.test:8000/
 
 LOG_CHANNEL=stack
 
