--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy .env
-        run: cp .env.dusk.local .env
+        run: grep -v 'USE_CONTAINER_BROWSER' .env.dusk.local | sed -e 's/planningpoker\.test/localhost/' > .env
 
       - name: Setup PHP Action
         uses: shivammathur/setup-php@2.9.0 #https://github.com/shivammathur/setup-php
