Updated dusk for testing in container and ci pipeline

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -2,9 +2,12 @@ APP_NAME=SimplePointer
 APP_ENV=testing
 APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
-APP_DEBUG=true
+APP_DEBUG=false
 
-APP_URL=http://planningpoker.test/
+# Use the Chrome container for dusk tests
+USE_CONTAINER_BROWSER=TRUE
+
+APP_URL=http://planningpoker.test
 
 LOG_CHANNEL=stack
 
@@ -26,5 +29,3 @@ PUSHER_APP_CLUSTER=mt1
 MIX_USE_LOCAL=true
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-USE_CONTAINER_BROWSER=TRUE
