--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "deployer/deployer": "^6.8",
         "deployer/recipes": "^6.2",
         "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.14",
         "laravel/dusk": "^6.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
@@ -66,7 +66,8 @@
         ],
         "post-update-cmd": [
             "@php artisan ide-helper:generate",
-            "@php artisan ide-helper:meta"
+            "@php artisan ide-helper:meta",
+            "@php artisan ide-helper:model -N"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
@@ -77,13 +78,10 @@
         "phpunit": [
             "./vendor/bin/phpunit --color=always"
         ],
-        "dusk": [
-            "@php artisan dusk"
-        ],
         "phpstan": [
             "./vendor/bin/phpstan analyse --memory-limit=2G"
         ],
-        "test-all": [
+        "test-suite": [
             "./vendor/bin/phpstan analyse --memory-limit=2G",
             "./vendor/bin/phpunit --color=always",
             "@php artisan dusk"
