--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 
-APP_URL=http://127.0.0.1:8080/
+APP_URL=http://planningpoker.test:8000/
 
 LOG_CHANNEL=stack
 
