--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Setup .env
         run: cp .env.example .env
 
+      - name: Set app url
+        run: sudo sed -i 's~APP_URL=http://planningpoker.test~APP_URL="http://127.0.0.1"~g' .env
+
       - name: Setup PHP Action
         uses: shivammathur/setup-php@2.9.0 #https://github.com/shivammathur/setup-php
         with:
