--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -4,6 +4,8 @@ APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
 APP_DEBUG=false
 
+DOCKER_DUSK=true
+
 APP_URL=http://planningpoker.test
 
 LOG_CHANNEL=stack
