--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Setup .env
         run: cp .env.example .env
 
-      - name: Set app url
-        run: sudo sed -i 's~APP_URL=http://planningpoker.test~APP_URL="http://127.0.0.1"~g' .env
+      - name: Set dusk app url
+        run: sudo sed -i 's~APP_URL=http://planningpoker.test~APP_URL="http://127.0.0.1"~g' .env.dusk.local
 
       - name: Setup PHP Action
         uses: shivammathur/setup-php@2.9.0 #https://github.com/shivammathur/setup-php
