--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -1,10 +1,10 @@
 APP_NAME=SimplePointer
-APP_ENV=testing
+APP_ENV=ci
 APP_KEY=base64:z+8HOe9OXmUftIVaBkdTWByv8DDBXKX2pw6l5rwzufA=
 
 APP_DEBUG=false
 
-APP_URL=http://planningpoker.test
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 
@@ -17,7 +17,7 @@ QUEUE_CONNECTION=database
 SESSION_DRIVER=cookie
 SESSION_LIFETIME=120
 
-PUHSER_HOST=supervisor
+PUHSER_HOST=127.0.0.1
 PUSHER_APP_ID=aCAvGIXkcbawZl5
 PUSHER_APP_KEY=j1KfhDWAamyjYCX
 PUSHER_APP_SECRET=Rb2YYcU2pqQFHLzEwVRQ
