--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,21 +13,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
       - name: Setup .env
-        run: cp .env.example .env
-
+        run: cp .env.dusk.ci .env
       - name: Setup PHP Action
-        uses: shivammathur/setup-php@2 #https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
           Extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
           coverage: none
-
       - name: Get composer cache directory
         id: composercache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
       - name: Cache composer dependencies
         uses: actions/cache@v2
         with:
@@ -37,16 +33,12 @@ jobs:
             # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
-
       - name: Install Dependencies (PHP vendors)
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
-
+        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
       - name: Generate key
         run: php artisan key:generate
-
       - name: Run CS Fixer
-        uses: OskarStark/php-cs-fixer-ga@v2
-
+        uses: docker://oskarstark/php-cs-fixer-ga
       - name: Get npm cache directory
         uses: actions/cache@v2
         with:
@@ -54,61 +46,44 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
-
       - name: Install front-end dependencies
         run: |
           npm install
           npm run prod
-
       - name: Create DB and schemas
         run: |
           mkdir -p storage
           touch storage/database.sqlite
           php artisan migrate --seed
-
       - name: Run phpstan
         run: composer phpstan
-
       - name: Run PHPUnit tests
         env:
             DB_CONNECTION: sqlite
             DB_DATABASE: database.sqlite
         run: composer phpunit
-
       - name: Upgrade chrome driver
         run: php artisan dusk:chrome-driver `/opt/google/chrome/chrome --version | cut -d " " -f3 | cut -d "." -f1`
-
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux > /dev/null 2>&1 &
-
       - name: Run Laravel Server
-        env:
-          PUHSER_HOST: 127.0.0.1 # Set the pusher host for github actions
-        run: php artisan serve > /dev/null 2>&1 &
-
+        run: php artisan serve --no-reload &
       - name: Run Websockets Server
         run: php artisan websockets:serve > /dev/null 2>&1 &
-
       - name: Run dusk tests
-        env:
-          APP_URL: "http://127.0.0.1"
-          DOCKER_DUSK: false
         run: php artisan dusk
-
       - name: Upload Logs on failure
         if: failure()
         uses: actions/upload-artifact@v2
         with:
           name: logs
           path: storage/logs
-
       - name: Upload Dusk Screenshots on error
         if: failure()
         uses: actions/upload-artifact@v2
         with:
           name: screenshots
           path: tests/Browser/screenshots
-
       - name: Upload Dusk Console Logs on error
         if: failure()
         uses: actions/upload-artifact@v2
