--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -11,20 +11,25 @@ jobs:
       fail-fast: true
       matrix:
         php-versions: ["7.4"]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup .env
         run: cp .env.dusk.ci .env
+
       - name: Setup PHP Action
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
           Extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
           coverage: none
+
       - name: Get composer cache directory
         id: composercache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+
       - name: Cache composer dependencies
         uses: actions/cache@v2
         with:
@@ -34,12 +39,16 @@ jobs:
             # key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
+
       - name: Install Dependencies (PHP vendors)
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+
       - name: Generate key
         run: php artisan key:generate
+
       - name: Run CS Fixer
         uses: docker://oskarstark/php-cs-fixer-ga
+
       - name: Get npm cache directory
         uses: actions/cache@v2
         with:
@@ -47,30 +56,45 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
+
       - name: Install front-end dependencies
         run: |
           npm install
           npm run prod
+
+      - name: Upload build files
+        uses: actions/upload-artifact@v1
+        with:
+          name: assets
+          path: public
+
       - name: Create DB and schemas
         run: |
           mkdir -p storage
           touch storage/database.sqlite
           php artisan migrate --seed
+
       - name: Run phpstan
         run: composer phpstan
+
       - name: Run PHPUnit tests
         env:
             DB_CONNECTION: sqlite
             DB_DATABASE: database.sqlite
         run: composer phpunit
+
       - name: Upgrade chrome driver
         run: php artisan dusk:chrome-driver `/opt/google/chrome/chrome --version | cut -d " " -f3 | cut -d "." -f1`
+
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux > /dev/null 2>&1 &
+
       - name: Run Laravel Server
         run: php artisan serve --no-reload &
+
       - name: Run Websockets Server
         run: php artisan websockets:serve > /dev/null 2>&1 &
+
       - name: Run dusk tests
         run: php artisan dusk
 
@@ -85,19 +109,23 @@ jobs:
         with:
           name: assets
           path: public
+
       - name: Setup PHP Action
-        uses: shivammathur/setup-php@2.9.0 #https://github.com/shivammathur/setup-php
+        uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
           php-version: 7.4
           Extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite
           coverage: none
+
       - name: Composer install
         run: composer install
+
       - name: Setup Deployer
         uses: atymic/deployer-php-action@master
         with:
           ssh-private-key: ${{ secrets.LIGHTHSAIL_PRIVATE_KEY }}
           ssh-known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
+
       - name: Deploy to Prod
         env:
           DOT_ENV: ${{ secrets.DOT_ENV }}
