Renamed url to simplepointer

--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -11,7 +11,7 @@ upstream websocket1 {
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost planningpoker.test;
+    server_name localhost simplepointer.test;
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/html/public;
@@ -46,7 +46,7 @@ server {
 # conversely we don't have to expose 6001 and 9000 on the host if we receive all ports here.
 server {
     listen 6001;
-    server_name localhost planningpoker.test;
+    server_name localhost simplepointer.test;
     location / {
         proxy_pass http://websocket1;
         proxy_http_version 1.1;
