--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 
-APP_URL=http://planningpoker.test
+APP_URL=http://simplepointer.test
 
 LOG_CHANNEL=stack
 
