--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php-versions: [8.0, 7.4]
+        php-versions: [7.4]
 
     steps:
       - name: Checkout
