--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.14",
         "laravel/dusk": "^6.4",
+        "laravel/sail": "^1.12",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "nunomaduro/larastan": "^0.6.4",
@@ -37,7 +38,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     },
     "extra": {
         "laravel": {
