--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,34 @@
-version: "3"
-
-networks:
-  laravel:
-
+# For more information: https://laravel.com/docs/sail
+version: '3'
 services:
-  app:
-    build:
-      context: .
-      dockerfile: ./.docker/php-fpm/Dockerfile
-    container_name: app_simple_pointer
-    volumes:
-      - ./:/var/www/html:delegated
-    ports:
-      - "9000:9000"
-    links:
-      - 'nginx:simplepointer.test'
-    networks:
-      - laravel
-
-  supervisor:
-    build:
-      context: .
-      dockerfile: ./.docker/supervisor/Dockerfile
-    container_name: supervisor
-    volumes:
-      - ./:/var/www/html:delegated
-    depends_on:
-      - app
-    ports:
-      - "6001:6001"
-    networks:
-      - laravel
-
-  nginx:
-    image: nginx:stable-alpine
-    container_name: nginx
-    ports:
-      - "8000:80"
-    volumes:
-      - ./public:/var/www/html/public:delegated
-      - ./.docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    networks:
-      - laravel
-
-  # Used when running dusk tests
-  selenium:
-    image: 'selenium/standalone-chrome'
-    volumes:
-        - '/dev/shm:/dev/shm'
-    links:
-      - 'nginx:simplepointer.test'
-    networks:
-      - laravel
+    laravel.test:
+        build:
+            context: ./vendor/laravel/sail/runtimes/8.1
+            dockerfile: Dockerfile
+            args:
+                WWWGROUP: '${WWWGROUP}'
+        image: sail-8.1/app
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
+        ports:
+            - '${APP_PORT:-80}:80'
+        environment:
+            WWWUSER: '${WWWUSER}'
+            LARAVEL_SAIL: 1
+            XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+            XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+        volumes:
+            - '.:/var/www/html'
+        networks:
+            - sail
+        depends_on:
+            - selenium
+    selenium:
+        image: 'selenium/standalone-chrome'
+        volumes:
+            - '/dev/shm:/dev/shm'
+        networks:
+            - sail
+networks:
+    sail:
+        driver: bridge
