--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.3|^8.1",
         "beyondcode/laravel-websockets": "^1.4",
         "dyrynda/laravel-efficient-uuid": "^4.0",
         "dyrynda/laravel-model-uuid": "^6.1",
-        "fideloper/proxy": "^4.2",
-        "fruitcake/laravel-cors": "^1.0",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "pusher/pusher-php-server": "^4.1",
-        "spatie/db-dumper": "^2.18"
+        "spatie/db-dumper": "^3.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
         "barryvdh/laravel-ide-helper": "^2.8",
         "deployer/deployer": "^7.0",
-        "facade/ignition": "^2.3.6",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^1.14",
         "laravel/dusk": "^6.4",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "nunomaduro/larastan": "^0.6.4",
+        "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^2.1",
         "phpunit/phpunit": "^9.0",
-        "staudenmeir/dusk-updater": "^1.1"
+        "staudenmeir/dusk-updater": "^1.3"
     },
     "config": {
         "optimize-autoloader": true,
@@ -84,7 +83,7 @@
         "phpstan": [
             "./vendor/bin/phpstan analyse --memory-limit=2G"
         ],
-        "tests": [
+        "test": [
             "./vendor/bin/phpstan analyse --memory-limit=2G",
             "./vendor/bin/phpunit --color=always",
             "@php artisan dusk"
